grunt: combined general logic with all.service/controllers

--- a/.hintrc
+++ b/.hintrc
@@ -12,6 +12,8 @@
           "backdrop-filter"
         ]
       }
-    ]
+    ],
+    "button-type": "off",
+    "axe/name-role-value": "off"
   }
 }
